--- a/src/Components/Pagination/Pagination.scss
+++ b/src/Components/Pagination/Pagination.scss
@@ -1,5 +1,56 @@
 @import '../../Styles/variables.scss';
 
 .Pagination-wrapper {
-    
+    display: flex;
+    padding: 30px 0;
+
+    .pagination-pages {
+        display: flex;
+        color: white;
+        flex-direction: row;
+        width: 95%;
+        justify-content: center;
+        align-items: center;
+        list-style: none;
+
+        .page-bullet {
+            width: 8px;
+            height: 8px;
+            border-radius: 50%;
+            margin: 0 4px;
+            background: white;
+            display: block;
+        }
+
+        .active {
+            background: $color-green;
+        }
+    }
+
+    .pages-out-of {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        color: white;
+        width: 5%;
+        height: 30px;
+
+        .number-1 {
+            font-size: 22px;
+            font-weight: 600;
+            padding-right: 5px;
+        }
+
+        .number-2 {
+            font-size: 20px;
+            padding-left: 5px;
+        }
+
+        .separator {
+            width: 1px;
+            height: 100%;
+            background: white;
+        }
+    }
 }
