--- a/src/App.scss
+++ b/src/App.scss
@@ -7,3 +7,9 @@
     background: #222222;
     padding: 0 40px;
 }
+
+.Filters-wrapper {
+    display: flex;
+    justify-content: flex-end;
+    padding: 30px 0;
+}
